# web_aplgs120st

./: README.md  pyproject.toml
src/: main.py  test.py
src/configs/: config.py
src/exceptions/: NoPwdAlertException.py
src/loggers/: logger.py
src/telnet/: TelnetConnection.py  disconnect.py  telnet.py
src/utils/: change_ipAddr.py  get_last_2_words.py  randChar.py
src/web/: Web.py  check.py  login.py  setProp.py  set_prop.py  titleCheck.py
src/web/apis/: wati_for_element.py
