[tool.poetry]
name = "aplgs120st-web"
version = "0.1.0"
description = ""
authors = ["esio <esiokao@gmail.com>"]
readme = "README.md"
packages = [{include = "aplgs120st_web"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.21.0"


[tool.poetry.group.dev.dependencies]
webdriver-manager = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
